2003-12-04  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* status.c (status_do): don't overwrite percentage in tag mode.

2003-07-12  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* sftp.c (sftp_close, _sftp_close): move part shared with signal
	handler to own function.
	(sftp_open): set up SIGCHLD handler.
	(_sftp_sig_child): collect exit status when ssh dies.

2003-05-19  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* display.c (disp_restat): don't truncate string if it is short
	enough.

2003-05-16  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* configure.in, INSTALL, install-sh, missing, mkinstalldirs:
	update to autoconf 2.50 and automake 1.7.
	* configure.in: check for vasprintf.
	* snprintf.c: add vasprintf replacement.

	* display.c (disp_status, disp_restat): avoid fixed-size buffer.

2003-05-13  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (_ftp_update_transfer): add missing argument to
	disp_status call.
	
	* ftp.c (ftp_reconnect): _ftp_port and _ftp_user may well be NULL.

	* util.c (noalloc_basename): move basename replacement function
	here and rename; adapt callers.
	* basename.c: remove.
	* configure.in: remove test for basename(3).

2003-04-16  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* mkbind.c (main): fix typo resulting in undersized buffer.
	Reported by Anil Madhavapeddy.

2003-04-08  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* list.c (list_desel, list_sel): bounds check line to be
	(de)selected.  This is (neccessarily) out of bounds for empty
	list.

2003-01-29  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (_ftp_update_transfer): don't estimate time of completion
	if size is unknown; if we got more bytes than the reported size,
	discard size (it's obviously incorrect).

2002-12-10  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* url.c: include config.h to get USE_SFTP definition.

2002-10-23  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* readdir.c: include readdir.h for prototypes.
	* loop.c: include loop.h for prototypes.